added test unitaire contoller