@@ -3,13 +3,10 @@ package com.safetynet.api.service;
 import com.safetynet.api.container.DataJsonContainer;
 import com.safetynet.api.model.Person;
 import com.safetynet.api.service.contracts.IDataJsonService;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
@@ -24,28 +21,20 @@ import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 public class PersonServiceTest {
+    @InjectMocks
+    private PersonService personService;
     @Mock
     private DataJsonContainer dataJsonContainer;
     @Mock
     private IDataJsonService dataJsonService;
-    @InjectMocks
-    private PersonService personService;
-    private Person person = new Person("Alice", "Jean", "5 av lyon", "Paris", "123", "235648", "alice@mail.com");
-    private List<Person> personList = new ArrayList<>();
-    private String pathFile = FILE_PATH;
-
-    @BeforeEach
-    private void setUp() {
-    }
-
-    @AfterEach
-    void tearDown() {
-    }
+    private final Person person = new Person("Alice", "Jean", "5 av lyon", "Paris", "123", "235648", "alice@mail.com");
+    private final List<Person> personList = new ArrayList<>();
+    private final String pathFile = FILE_PATH;
 
     @Test
     void existPersonTest() throws IOException {
         //Arrange
-        List<Person> personList = Arrays.asList(person);
+        List<Person> personList = List.of(person);
         when(dataJsonService.readFileJson(pathFile)).thenReturn(dataJsonContainer);
         when(dataJsonContainer.getPersonsList()).thenReturn(personList);
         System.out.println(personList);
@@ -60,7 +49,6 @@ public class PersonServiceTest {
         // Arrange
         when(dataJsonService.readFileJson(FILE_PATH)).thenReturn(dataJsonContainer);
         when(dataJsonContainer.getPersonsList()).thenReturn(personList);
-        //when(personService.existPerson(person)).thenReturn(false);
         doNothing().when(dataJsonService).writeFileJson(dataJsonContainer, pathFile);
         // Act
         boolean result = personService.addPerson(person);
@@ -74,7 +62,7 @@ public class PersonServiceTest {
     @Test
     void updatePersonTest() throws IOException {
         // Arrange
-        List<Person> personList = new ArrayList<>(Arrays.asList(person));
+        List<Person> personList = new ArrayList<>(List.of(person));
         lenient().when((dataJsonService.readFileJson(FILE_PATH))).thenReturn(dataJsonContainer);
         when(dataJsonContainer.getPersonsList()).thenReturn(personList);
        // when(personService.existPerson(person)).thenReturn(true);
@@ -100,4 +88,5 @@ public class PersonServiceTest {
         //Verify
         verify(dataJsonService, times(1)).writeFileJson(dataJsonContainer, pathFile);
     }
+
 }
